# toibot2

./: README.md
devel/: .catkin  .rosinstall  setup.sh
devel/lib/pkgconfig/: scripts.pc  tensorflow_object_detector.pc  toi_bot_vision.pc
devel/lib/python2.7/dist-packages/object_detection/: __init__.py
devel/share/scripts/cmake/: scriptsConfig.cmake
devel/share/tensorflow_object_detector/cmake/: tensorflow_object_detectorConfig.cmake
devel/share/toi_bot_vision/cmake/: toi_bot_visionConfig.cmake
src/speech_to_text/: CMakeLists.txt  detect_speech_record_and_respond.py  dialogflowAPI.py  package.xml  speech_to_text.py
src/toi_bot_vision/: CMakeLists.txt  package.xml
src/toi_bot_vision/include/toi_bot_vision/: FaceTracker.h  FoldersManagment.h  emotionDetection.h  personManager.h
src/toi_bot_vision/src/: FaceTracker.cpp  FoldersManagment.cpp  emotionDetection.cpp  main.cpp  personManager.cpp
